--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "doctrine/doctrine-migrations-bundle": "^3.2",
     "doctrine/orm": "^2.14",
     "knplabs/knp-time-bundle": "^1.20",
+    "liip/imagine-bundle": "^2.10",
     "phpdocumentor/reflection-docblock": "^5.3",
     "phpstan/phpdoc-parser": "^1.15",
     "sensio/framework-extra-bundle": "^6.1",
@@ -90,7 +91,7 @@
   },
   "extra": {
     "symfony": {
-      "allow-contrib": false,
+      "allow-contrib": true,
       "require": "6.2.*"
     }
   },
