--- a/config/packages/routing.yaml
+++ b/config/packages/routing.yaml
@@ -1,12 +1,21 @@
 framework:
-    router:
-        utf8: true
+  router:
+    utf8: true
 
-        # Configure how to generate URLs in non-HTTP contexts, such as CLI commands.
-        # See https://symfony.com/doc/current/routing.html#generating-urls-in-commands
-        #default_uri: http://localhost
+    # app/config/routing.yml
+# _liip_imagine:
+#   resource: "@LiipImagineBundle/Resources/config/routing.yaml"
+
+# app/config/routing.yml
+
+# Configure how to generate URLs in non-HTTP contexts, such as CLI commands.
+# See https://symfony.com/doc/current/routing.html#generating-urls-in-commands
+#default_uri: http://localhost
 
 when@prod:
-    framework:
-        router:
-            strict_requirements: null
+  framework:
+    router:
+      strict_requirements: null
+
+    _liip_imagine:
+      resourse: "@LiipImagineBundle/Resources/config/routing.yaml"
